Deploy for Development a2182fb50da7978d5ffc54c1693e66f528df71ae

--- a/dev/static/locales/en/literal.json
+++ b/dev/static/locales/en/literal.json
@@ -117,6 +117,7 @@
   "unicamp": "UNICAMP",
   "unifei": "UNIFEI",
   "universalWindowsPlatform": "Universal Windows Platform",
+  "version": "Version",
   "view": "View",
   "vsCode": "VS Code",
   "vsCodeExtension": "VS Code Extension",
