--- a/dev/static/locales/pt/literal.json
+++ b/dev/static/locales/pt/literal.json
@@ -117,6 +117,7 @@
   "unicamp": "UNICAMP",
   "unifei": "UNIFEI",
   "universalWindowsPlatform": "Universal Windows Platform",
+  "version": "Versão",
   "view": "Visualizar",
   "vsCode": "VS Code",
   "vsCodeExtension": "VS Code Extension",
