--- a/static/locales/en/literal.json
+++ b/static/locales/en/literal.json
@@ -117,6 +117,7 @@
   "unicamp": "UNICAMP",
   "unifei": "UNIFEI",
   "universalWindowsPlatform": "Universal Windows Platform",
+  "version": "Version",
   "view": "View",
   "vsCode": "VS Code",
   "vsCodeExtension": "VS Code Extension",
