Deploy for Development 0ba7e798e72ab74a49d1ae45ca9f442bc01560c3

--- a/dev/static/locales/pt/common.json
+++ b/dev/static/locales/pt/common.json
@@ -7,6 +7,6 @@
   },
   "copyright": "© {{year}} {{name}}",
   "messages": {
-    "storedCookies": "Suas preferências são salvas no seu navegador. :)"
+    "storedCookies": "Suas preferências são salvas no seu navegador."
   }
 }
