--- a/static/locales/pt/common.json
+++ b/static/locales/pt/common.json
@@ -7,6 +7,6 @@
   },
   "copyright": "© {{year}} {{name}}",
   "messages": {
-    "storedCookies": "Suas preferências são salvas no seu navegador. :)"
+    "storedCookies": "Suas preferências são salvas no seu navegador."
   }
 }
