Deploy Staging 35ba9e6b90d3ea1b74ac5a747cd5ef212b600267

--- a/staging/static/locales/en/literal.json
+++ b/staging/static/locales/en/literal.json
@@ -52,6 +52,7 @@
   "juniorSoftwareEngineer": "Junior Software Engineer",
   "jupyterNotebooks": "Jupyter Notebooks",
   "kanban": "Kanban",
+  "kieCommunity": "KIE Community",
   "kieTools": "KIE Tools",
   "language": "Language",
   "light": "Light",
@@ -108,9 +109,11 @@
   "tensorFlowJs": "TensorFlow JS",
   "text": "Text",
   "texts": "Texts",
+  "theDevelopersConference": "The Developer's Conference",
   "theme": "Theme",
   "tomcat": "Tomcat",
   "toolbox": "Toolbox",
+  "towardsDataScience": "Towards Data Science",
   "twitter": "Twitter",
   "typeScript": "TypeScript",
   "udacity": "Udacity",
