--- a/staging/static/locales/pt/literal.json
+++ b/staging/static/locales/pt/literal.json
@@ -52,6 +52,7 @@
   "juniorSoftwareEngineer": "Engenheiro de Software Júnior",
   "jupyterNotebooks": "Jupyter Notebooks",
   "kanban": "Kanban",
+  "kieCommunity": "Comunidade KIE",
   "kieTools": "KIE Tools",
   "language": "Idioma",
   "light": "Claro",
@@ -108,9 +109,11 @@
   "tensorFlowJs": "TensorFlow JS",
   "text": "Texto",
   "texts": "Textos",
+  "theDevelopersConference": "The Developer's Conference",
   "theme": "Tema",
   "tomcat": "Tomcat",
   "toolbox": "Caixa de Ferramentas",
+  "towardsDataScience": "Towards Data Science",
   "twitter": "Twitter",
   "typeScript": "TypeScript",
   "udacity": "Udacity",
