--- a/static/locales/pt/literal.json
+++ b/static/locales/pt/literal.json
@@ -52,6 +52,7 @@
   "juniorSoftwareEngineer": "Engenheiro de Software Júnior",
   "jupyterNotebooks": "Jupyter Notebooks",
   "kanban": "Kanban",
+  "kieCommunity": "Comunidade KIE",
   "kieTools": "KIE Tools",
   "language": "Idioma",
   "light": "Claro",
@@ -87,6 +88,7 @@
   "repositories": "Repositórios",
   "restfulWs": "RESTful WS",
   "samsung": "Samsung",
+  "scrollToTop": "Ir para início",
   "scrum": "Scrum",
   "seniorSoftwareEngineer": "Engenheiro de Software Sênior",
   "settings": "Configurações",
@@ -107,9 +109,11 @@
   "tensorFlowJs": "TensorFlow JS",
   "text": "Texto",
   "texts": "Textos",
+  "theDevelopersConference": "The Developer's Conference",
   "theme": "Tema",
   "tomcat": "Tomcat",
   "toolbox": "Caixa de Ferramentas",
+  "towardsDataScience": "Towards Data Science",
   "twitter": "Twitter",
   "typeScript": "TypeScript",
   "udacity": "Udacity",
