--- a/static/locales/en/literal.json
+++ b/static/locales/en/literal.json
@@ -52,6 +52,7 @@
   "juniorSoftwareEngineer": "Junior Software Engineer",
   "jupyterNotebooks": "Jupyter Notebooks",
   "kanban": "Kanban",
+  "kieCommunity": "KIE Community",
   "kieTools": "KIE Tools",
   "language": "Language",
   "light": "Light",
@@ -87,6 +88,7 @@
   "repositories": "Repositories",
   "restfulWs": "RESTful WS",
   "samsung": "Samsung",
+  "scrollToTop": "Scroll to top",
   "scrum": "Scrum",
   "seniorSoftwareEngineer": "Senior Software Engineer",
   "settings": "Settings",
@@ -107,9 +109,11 @@
   "tensorFlowJs": "TensorFlow JS",
   "text": "Text",
   "texts": "Texts",
+  "theDevelopersConference": "The Developer's Conference",
   "theme": "Theme",
   "tomcat": "Tomcat",
   "toolbox": "Toolbox",
+  "towardsDataScience": "Towards Data Science",
   "twitter": "Twitter",
   "typeScript": "TypeScript",
   "udacity": "Udacity",
