--- a/static/locales/pt/text.json
+++ b/static/locales/pt/text.json
@@ -1,6 +1,6 @@
 {
   "header": "Aqui você encontra alguns de meus <1>textos</1>",
-  "mastersThesis": "Estruturas hierárquicas orientadas por dados em aprendizado multi-tarefa",
+  "mastersThesis": "Data-driven hierarchical structures in multi-task learning",
   "blogPosts": {
     "workspaceCollaboration": "Workspace collaboration via change requests",
     "playingWithObjectDetection": "Playing with object detection",
