Deploy Staging 51fff6a09374ba9456ccb09a20865b291726a592

--- a/staging/static/locales/en/literal.json
+++ b/staging/static/locales/en/literal.json
@@ -6,6 +6,7 @@
   "archetypes": "Archetypes",
   "architecture": "Architecture",
   "artifact": "Artifact",
+  "awards": "Awards",
   "b2mlSystems": "B2ML Systems",
   "backend": "Backend",
   "bayesianStatistics": "Bayesian Statistics",
@@ -63,6 +64,7 @@
   "mastersThesis": "Master's thesis",
   "matlab": "MATLAB",
   "maven": "Maven",
+  "meritHonorDiploma": "Merit Honor Diploma",
   "moreDetails": "More Details",
   "motorola": "Motorola",
   "multiTaskLearning": "Multi-Task Learning",
