--- a/staging/static/locales/es/literal.json
+++ b/staging/static/locales/es/literal.json
@@ -6,6 +6,7 @@
   "archetypes": "Archetypes",
   "architecture": "Arquitectura",
   "artifact": "Artefacto",
+  "awards": "Premios",
   "b2mlSystems": "B2ML Sistemas",
   "backend": "Backend",
   "bayesianStatistics": "Estadística Bayesiana",
@@ -63,6 +64,7 @@
   "mastersThesis": "Tesis de maestria",
   "matlab": "MATLAB",
   "maven": "Maven",
+  "meritHonorDiploma": "Diploma de Honor al Mérito",
   "moreDetails": "Más detalles",
   "motorola": "Motorola",
   "multiTaskLearning": "Aprendizaje Multitarea",
