--- a/staging/static/locales/pt/literal.json
+++ b/staging/static/locales/pt/literal.json
@@ -6,6 +6,7 @@
   "archetypes": "Archetypes",
   "architecture": "Arquitetura",
   "artifact": "Artefato",
+  "awards": "Prêmios",
   "b2mlSystems": "B2ML Sistemas",
   "backend": "Backend",
   "bayesianStatistics": "Estatística Bayesiana",
@@ -63,6 +64,7 @@
   "mastersThesis": "Dissertação de Mestrado",
   "matlab": "MATLAB",
   "maven": "Maven",
+  "meritHonorDiploma": "Diploma de Honra ao Mérito",
   "moreDetails": "Mais Detalhes",
   "motorola": "Motorola",
   "multiTaskLearning": "Aprendizado Multi-Tarefa",
