Deploy Staging 3d8efb64485ea2da008a74a57cbf474f9b8ef69f

--- a/staging/static/locales/en/common.json
+++ b/staging/static/locales/en/common.json
@@ -1,12 +1,1 @@
-{
-  "social": {
-    "tooltip": "{{kind}} Profile"
-  },
-  "location": {
-    "tooltip": "Currently based on {{location}}"
-  },
-  "copyright": "© {{year}} {{name}}",
-  "messages": {
-    "storedCookies": "Your preferences are saved in your browser storage."
-  }
-}
+{"social":{"tooltip":"{{kind}} Profile"},"location":{"tooltip":"Currently based on {{location}}"},"copyright":"© {{year}} {{name}}","messages":{"storedCookies":"Your preferences are saved in your browser storage."}}
