--- a/staging/static/locales/es/common.json
+++ b/staging/static/locales/es/common.json
@@ -1,12 +1,1 @@
-{
-  "social": {
-    "tooltip": "Perfil {{kind}}"
-  },
-  "location": {
-    "tooltip": "Actualmente vive en {{location}}"
-  },
-  "copyright": "© {{year}} {{name}}",
-  "messages": {
-    "storedCookies": "Sus preferencias se guardan en su navegador."
-  }
-}
+{"social":{"tooltip":"Perfil {{kind}}"},"location":{"tooltip":"Actualmente vive en {{location}}"},"copyright":"© {{year}} {{name}}","messages":{"storedCookies":"Sus preferencias se guardan en su navegador."}}
