--- a/staging/static/locales/pt/common.json
+++ b/staging/static/locales/pt/common.json
@@ -1,12 +1,1 @@
-{
-  "social": {
-    "tooltip": "Perfil {{kind}}"
-  },
-  "location": {
-    "tooltip": "Atualmente vivendo no {{location}}"
-  },
-  "copyright": "© {{year}} {{name}}",
-  "messages": {
-    "storedCookies": "Suas preferências são salvas no seu navegador."
-  }
-}
+{"social":{"tooltip":"Perfil {{kind}}"},"location":{"tooltip":"Atualmente vivendo no {{location}}"},"copyright":"© {{year}} {{name}}","messages":{"storedCookies":"Suas preferências são salvas no seu navegador."}}
