--- a/staging/static/locales/pt/drawer.json
+++ b/staging/static/locales/pt/drawer.json
@@ -1,17 +1,1 @@
-{
-  "about": {
-    "subtitle": "Palavras sobre mim"
-  },
-  "journey": {
-    "subtitle": "Educação & experiência"
-  },
-  "text": {
-    "subtitle": "Conteúdo que escrevi"
-  },
-  "talk": {
-    "subtitle": "Assuntos que apresentei"
-  },
-  "code": {
-    "subtitle": "Projetos que destaco"
-  }
-}
+{"about":{"subtitle":"Palavras sobre mim"},"journey":{"subtitle":"Educação & experiência"},"text":{"subtitle":"Conteúdo que escrevi"},"talk":{"subtitle":"Assuntos que apresentei"},"code":{"subtitle":"Projetos que destaco"}}
