--- a/staging/static/locales/en/drawer.json
+++ b/staging/static/locales/en/drawer.json
@@ -1,17 +1,1 @@
-{
-  "about": {
-    "subtitle": "Words about myself"
-  },
-  "journey": {
-    "subtitle": "Education & experience"
-  },
-  "text": {
-    "subtitle": "Content that I've written"
-  },
-  "talk": {
-    "subtitle": "Things that I've talked about"
-  },
-  "code": {
-    "subtitle": "Projects worth highlighting"
-  }
-}
+{"about":{"subtitle":"Words about myself"},"journey":{"subtitle":"Education & experience"},"text":{"subtitle":"Content that I've written"},"talk":{"subtitle":"Things that I've talked about"},"code":{"subtitle":"Projects worth highlighting"}}
